--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,3 @@
 maildir-indicator.conf      etc/
 maildir-indicator.desktop   usr/share/applications/
-maildir-indicator.py        usr/bin/
+maildir-indicator           usr/bin/
