--- a/debian/changelog
+++ b/debian/changelog
@@ -6,5 +6,11 @@ maildir-indicator (0.2) natty; urgency=low
   * Set .desktop file to autostart maildir-indicator
   * Find .desktop in /usr/share/applications
   * Initial add of debian packaging
+  * Fix pathing in EXEC line in .desktop file
+  * Rename maildir-indicator to nicer name for system use
+  * Fix install to non-.py version
+  * Don't use quilt
+  * Revert "Find .desktop in /usr/share/applications"
+  * Install .desktop file to xdg autostart dir
 
- -- Chris Irwin <chris@chrisirwin.ca>  Tue, 09 Aug 2011 01:18:42 -0400
+ -- Chris Irwin <chris@chrisirwin.ca>  Tue, 09 Aug 2011 01:51:59 -0400
